PyFalkon: Fix build with clang

BUG: 407734
FIXED-IN: 3.2.0