src/plugins/PyFalkon/pythonplugin.h
@@ -21,5 +21,5 @@
 
 void pyfalkon_register_plugin(PluginInterface *plugin);
 
-extern "C" Q_DECL_EXPORT Plugins::Plugin pyfalkon_load_plugin(const QString &name);
+extern "C" Q_DECL_EXPORT Plugins::Plugin *pyfalkon_load_plugin(const QString &name);
 extern "C" Q_DECL_EXPORT void pyfalkon_init_plugin(Plugins::Plugin *plugin);
